--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,6 @@
+- v1.0.3
+  - detect if an AddOn is trying to play a blizzard sound and unmute that sound
+  - bugfix: enable sfx channel on reload
 - v1.0.2
   - various login / reload / logout fixes
   - notify user when trying to ping during loading process
