--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,12 +1,2 @@
-- v1.2.0
-  - Patch 10.2.5 update
-- v1.0.3
-  - detect if an AddOn is trying to play a blizzard sound and unmute that sound
-  - bugfix: enable sfx channel on reload
-- v1.0.2
-  - various login / reload / logout fixes
-  - notify user when trying to ping during loading process
-  - disable sound effects during loading process
-  - disable sound effects on logout when enabled
-- v1.0.0
-  - initial release
+- v1.3.0
+  - War Within Update
