--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,2 +1,3 @@
-## 1.3.3 (2024-10-03)
-  - Make sure the sound effects channel stays enabled after reloading
+## 1.3.4 (2024-10-23)
+
+- Patch 10.0.5 Update
